# BikeZone

./: .gitignore  AI agent.ipynb  package-lock.json  package.json  pyproject.toml  replit.md  tailwind.config.js
public/: index.html
src/: App.js
src/components/: VehicleCard.js
src/components/FinanceCalculators/: EMICalculator.js  FuelCostCalculator.js
src/components/Layout/: Footer.js  Header.js
src/data/: vehicleData.js
src/pages/: Compare.js  DealerDashboard.js  FinanceTools.js  Home.js  Listings.js  Login.js  NotFound.js  ProductDetail.js  Profile.js  Register.js  Showrooms.js  UpcomingLaunches.js  UsedBikes.js
